--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-	"name": "plate-express",
-	"description": "app for tracking insurance expiration dates",
-	"version": "0.0.1",
-	"author": "jeremija <jerko.steiner@gmail.com>",
-	"dependencies": {
-	},
-	"devDependencies": {
-	}
+  "name": "plate-express",
+  "description": "app for tracking insurance expiration dates",
+  "version": "0.0.1",
+  "author": "jeremija <jerko.steiner@gmail.com>",
+  "dependencies": {
+    "express": "~3.4.4",
+    "mongodb": "~1.3.19",
+    "proxyquire": "~0.5.1"
+  },
+  "devDependencies": {
+    "mocha": "~1.14.0",
+    "expect": "0.0.2",
+    "expect.js": "~0.2.0",
+    "proxyquire": "~0.5.1"
+  }
 }
