--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "express": "~3.4.4",
     "mongodb": "~1.3.19",
-    "proxyquire": "~0.5.1"
+    "proxyquire": "~0.5.1",
+    "mongoose": "~3.8.0",
+    "crypto": "0.0.3",
+    "node-uuid": "~1.4.1"
   },
   "devDependencies": {
     "mocha": "~1.14.0",
