--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mocha": "~1.14.0",
     "expect": "0.0.2",
     "expect.js": "~0.2.0",
-    "proxyquire": "~0.5.1"
+    "proxyquire": "~0.5.1",
+    "supertest": "~0.8.1"
   }
 }
