--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "plate-express",
   "description": "app for tracking insurance expiration dates",
+  "private": true,
   "version": "0.0.1",
   "author": "jeremija <jerko.steiner@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/jeremija/plate-express.git"
+  },
   "dependencies": {
     "express": "~3.4.4",
     "mongodb": "~1.3.19",
-    "proxyquire": "~0.5.1",
     "mongoose": "~3.8.0",
     "crypto": "0.0.3",
     "node-uuid": "~1.4.1"
   },
   "devDependencies": {
     "mocha": "~1.14.0",
-    "expect": "0.0.2",
     "expect.js": "~0.2.0",
-    "proxyquire": "~0.5.1",
-    "supertest": "~0.8.1"
+    "supertest": "~0.8.1",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt": "~0.4.2",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
