--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "supertest": "~0.8.1",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt": "~0.4.2",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-mocha-test": "~0.7.0"
   }
 }
