--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongodb": "~1.3.19",
     "mongoose": "~3.8.0",
     "crypto": "0.0.3",
-    "node-uuid": "~1.4.1"
+    "node-uuid": "~1.4.1",
+    "async": "~0.2.9"
   },
   "devDependencies": {
     "mocha": "~1.14.0",
