--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "grunt-contrib-jshint": "~0.7.2",
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-mocha-test": "~0.7.0"
+    "grunt-mocha-test": "~0.7.0",
+    "commander": "~2.1.0",
+    "promptly": "~0.2.0"
   }
 }
